--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
   "dependencies": {
     "@formkit/auto-animate": "^0.8.2",
     "@nuxt/icon": "^1.5.1",
-    "@nuxtjs/moment": "^1.6.1",
     "@nuxtjs/tailwindcss": "^6.12.1",
     "@pinia/nuxt": "^0.5.4",
+    "@vueuse/core": "^11.1.0",
+    "@vueuse/nuxt": "^11.1.0",
     "moment": "^2.30.1",
     "nuxt": "^3.13.0",
     "pinia": "^2.2.2",
