--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@pinia/nuxt": "^0.5.4",
     "@vueuse/core": "^11.1.0",
     "@vueuse/nuxt": "^11.1.0",
+    "axios": "^1.7.7",
     "moment": "^2.30.1",
+    "node-schedule": "^2.1.1",
     "nuxt": "^3.13.0",
     "pinia": "^2.2.2",
     "vue": "latest",
